Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18571

Dirty index blocks can be lost after creating a new KV instance

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 4.5.0
    • forestdb
    • None
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      Since _fdb_kvs_create() calls filemgr_commit() and appends a new DB
      header, all existing dirty index updates are discarded.

      To avoid data loss, we have to finalize and flush previous dirty updates before calling commit.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jung-sang Jung-Sang Ahn (Inactive)
            jung-sang Jung-Sang Ahn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty