MB-18571 Finalize and flush dirty updates before creating a new KV instance

- Since _fdb_kvs_create() calls filemgr_commit() and appends a new DB
header, all previous dirty updates should be flushed before the
commit.

Change-Id: Iea79e3e25ff6e16cb8f82541608a0be2b04307de